--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+
+	"name": "wordtopdf-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "cors": "^2.8.6",
     "express": "^5.2.1",
@@ -7,9 +14,5 @@
   }
 }
 
-{
-  "scripts": {
-    "start": "node server.js"
-  }
-}
+
 
